--- a/style.css
+++ b/style.css
@@ -37,9 +37,10 @@
 
 .spotify-logo{
     /* border: 2px solid blue; */
-    width: 230px;
-    padding-left: 10px;
-    /* padding-top: 40px; */
+    width: 80%;
+}
+.spotify-logo>img{
+    width: 100%;
 }
 
 .nav-item {
@@ -263,47 +264,79 @@
 
 .play-music-area {
     width: 100%;
+    height: 80px;
     position: fixed;
     bottom: 3vh;
     left: 0;
     background-color:rgb(61, 60, 60);
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    /* border: 2px solid red; */
+    justify-content: flex-start;
+    border: 2px solid red;
 }
+
 .song-playing {
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
-    justify-content: flex-start;
-    /* border: 2px solid red; */
-    width: 15%;
+    justify-content:flex-start;
+    border: 2px solid blue;
+    width: 20%;
+    height: 100%;
 }
 
-.song-playing>img{
-    width:50px;
-    height: 90%;
+ .music-art{
+    border: 2px solid blue;
+    width:20%;
+    height: 80%;
+    margin-left: 10px;
+ }
+
+.music-art>img{
+    width:100%;
+    height: 100%;
+    padding:5px 5px 5px 5px;
+    bottom: 0px;
+    border: 2px solid red;
 }
 
+
+.song-playing-name{
+    width:50%;
+    height: 80%;
+    margin-left: 10px;
+    border:2px solid green;
+}
 .song-playing-name>h4 {
     display: block;
-    margin-block-start: 1.33em;
-    margin-block-end: 1.33em;
     font-weight: bold;
+     padding-bottom: 10px;
 }
 
 .song-playing-name>p {
-    font-size: 0.8rem;
+    font-size: 10px;
     color: rgb(7, 5, 5);
+}
+
+.like-a-song{
+    width: 20%;
+    height:80%;
+    margin-left: 10px;
+    border:2px solid green;
+}
+
+.like-a-song>img{
+    width: 80%;
+    height: 80%;
+    align-items: center;
+
 }
 
 .song-control {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 45%;
-    /* border: 2px solid blue; */
+    width: 55%;
+    border: 2px solid blue;
 }
 
 .song-control-upper {
@@ -312,24 +345,29 @@
     align-items: center;
 }
 
-#loop {
-    height: 2vh;
-}
-
 .song-control-lower {
-    font-size: 10px !important;
+    font-size: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 10px;
+    padding-bottom: 10px;
 }
 
 .song-extra-control {
     display: flex;
-    width: 25vw;
+    width:25%;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
+    height: 100%;
+    border: 2px solid blue;
+} 
+
+.song-extra-control>img{
+    padding:2px;
 }
+
+
 
 .green-notice {
     display: flex;
@@ -341,9 +379,26 @@
     bottom: 0;
     background-color: #1ED760;
     padding: 3px;
-    margin-right: 20px;
+    margin-right: 10px;
 }
 
 .green-notice>h3{
-    padding-right: 40px;
+    padding-right: 30px;
+    font-size: 15px;
+}
+
+@media only screen and (max-width: 960px) {
+     #volume{
+        width: 30%;
+    }
+}
+
+@media only screen and (max-width: 830px){
+    #loop{
+        width: 50%;
+    }
+
+    .music-art{
+          display: none;
+    }
 }
