--- a/playlist.css
+++ b/playlist.css
@@ -15,15 +15,15 @@
     justify-content: space-between;
     flex: 1;
     height: 80vh;
+    border: 2px solid red;
 }
 
-.side-bar-content {
+/* .side-bar-content {
     justify-content: space-between !important;
-    /* margin-top: 10px !important; */
-}
+  } */
 
 .spotify-logo{
-    padding-left: 8px !important;
+    padding-left: 8px ;
     width: 80px;
     height: 70px;
 }
@@ -39,7 +39,7 @@
 }
 
 .nav-line-seperation {
-    line-height: 5px;
+    line-height: 2px;
 }
 
 .home-section-album{
@@ -67,11 +67,16 @@
   cursor: pointer;
 }
 
+.album-art{
+  width: 70%;
+  height: 40%;
+  margin: 10px 20px 0px 20px;
+}
+
 .album-art>img{
-    width:100%;
-    height: 150px;
-    margin-left: 30px;
-    margin-bottom: 30px;
+    width:90%;
+    height: 70%;
+  
 }
 
 
@@ -555,7 +560,44 @@
     .volume-bar .progress-bar:hover .progress::after {
       --size: 0.8em;
     }
+
+    .side-bar-content {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: space-around;
+      /* border: 2px solid blue; */
+  }
   
+    @media screen and (max-width:680px) {
+      .playlist-title {
+        font-size: 40px;
+    }
+    .progress-controller {
+      width: 40%;
+     }
+     .nav-line-seperation {
+      line-height: 1rem;
+  }
+     
+
+     .side-bar{
+      justify-content:flex-start;
+    
+  }
+
+  .side-bar-content{
+    font-size: 10px;
+  }
+
+    }
+    
+    /* @media screen and (max-width:px) {
+      .playlist-title {
+        font-size: 40px;
+    }
+    } */
 
 
 
