--- a/playlist.css
+++ b/playlist.css
@@ -15,7 +15,7 @@
     justify-content: space-between;
     flex: 1;
     height: 80vh;
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 
 /* .side-bar-content {
